[package]
name = "web-3d-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poppler-rs = "0.21.0"
image = "0.24.5"
obj-rs = "0.7.0"
gltf = "1.1.0"
fbx = "0.1.0"
usvg = "0.29.0"
wasm-bindgen = "0.2.84"
